--- a/Notes/Variational-Categorization.tex
+++ b/Notes/Variational-Categorization.tex
@@ -14,7 +14,7 @@ We consider the problem of categorizing stimuli with overlapping distributions
   \edge {s} {r}; 
  \end{tikzpicture}
  \\
-$C$ is the category distribution ($\in \{0, 1\}$\\
+$C$ is the category distribution ($\in \{0, 1\})$\\
 $P(C) = .5$\\ 
 $s$ is the presented stimulus, a draw from the selected category distribution\\
 $P(s|C) = \mathcal{N} (s; 0, \sigma_{\text{C}}^2) = \mathcal{N} (s; 0, \tau_{\text{C}}^{-1})$\\
@@ -45,7 +45,7 @@ Let
 \tau_1, & \text{if } C = 1
 \end{cases}\\
 &= \tau_0 (1 - C) + \tau_1 C\\
-&= \tau_0 = (\tau_0 - \tau_1)C\\
+&= \tau_0 - (\tau_0 - \tau_1)C\\
 &= \tau_0 - C \Delta \tau
 \end{aligned}
 \end{equation}
@@ -66,10 +66,20 @@ Q(C, s|\mathbf{r}) = Q(C|\mathbf{r}) Q(s|\mathbf{r})
 \begin{equation}
 \begin{aligned}
 Q(C|\mathbf{r}) &= \langle \log P(C, s|\mathbf{r}) \rangle_{Q(s|\mathbf{r})}\\
-&= \frac{-(\tau_0 - C \Delta \tau)}{2} \langle s^2 \rangle_{Q(s|\mathbf{r})} + \frac{1}{2} \log \Big(\frac{\tau_0 - C \Delta \tau}{2 \pi} \Big)\\
-Q(s|\mathbf{r}) &= \langle \log P(C, s|\mathbf{r}) \rangle_{Q(C|\mathbf{r})}\\
-&= \sum_i \Big(- \log r_i! + r_i \log(f_i(s)) \Big) + \frac{- (\tau_0 - \langle C \rangle_{Q(C|\mathbf{r})}  \Delta \tau)}{2} s^2
+&= \frac{C \Delta \tau}{2} \langle s^2 \rangle_{Q(s|\mathbf{r})} + \frac{1}{2} \log \Big(\frac{\tau_0 - C \Delta \tau}{2 \pi} \Big)\\
+&\propto \frac{\langle s^2 \rangle_{Q(s|\mathbf{r})} \Delta \tau}{2} C\\
+&\sim \text{Binom}(C, p)\\
+p &= \frac{1}{1 + \sqrt{\frac{\tau_0}{\tau_1}} e^{\frac{\langle s^2 \rangle_{Q(s|\mathbf{r})} \Delta \tau}{2}}}
 \end{aligned}
 \end{equation}
+
+\begin{equation}
+\begin{aligned}
+Q(s|\mathbf{r}) &= \langle \log P(C, s|\mathbf{r}) \rangle_{Q(C|\mathbf{r})}\\
+&= \sum_i r_i \log(f_i(s)) + \frac{- (\tau_0 - \langle C \rangle_{Q(C|\mathbf{r})} \Delta \tau)}{2} s^2\\
+&\propto \frac{1}{2 \sigma^2_{\text{tc}}} \sum_i r_i (s - s_i^{\text{pref}})^2 + \frac{- (\tau_0 - \langle C \rangle_{Q(C|\mathbf{r})} \Delta \tau)}{2} s^2
+\end{aligned}
+\end{equation}
+
 
 \end{document}
