--- a/Notes/Variational-Categorization.tex
+++ b/Notes/Variational-Categorization.tex
@@ -79,9 +79,10 @@ Q(s|\mathbf{r}) &= \langle \log P(C, s|\mathbf{r}) \rangle_{Q(C|\mathbf{r})}\\
 &= \sum_i r_i \log(f_i(s)) + \frac{- (\tau_0 - \langle C \rangle_{Q(C|\mathbf{r})} \Delta \tau)}{2} s^2\\
 &\propto \frac{1}{2 \sigma^2_{\text{tc}}} \sum_i r_i (s - s_i^{\text{pref}})^2 + \frac{- (\tau_0 - \langle C \rangle_{Q(C|\mathbf{r})} \Delta \tau)}{2} s^2\\
 &\sim \mathcal{N} (\mu, \tau)\\
-\mu &= \sum_i \frac{\sigma^2_{\text{tc}}}{r_i} s_i^{\text{pref}}\\
-\tau &= \sum_i \frac{\sigma^2_{\text{tc}}}{r_i} + (\tau_0 - \langle C \rangle_{Q(C|\mathbf{r})} \Delta \tau)\\
-&= \sum_i \frac{\sigma^2_{\text{tc}}}{r_i} + (\tau_0 - p \Delta \tau)
+\tau &= \sum_i \frac{r_i}{\sigma^2_{\text{tc}}}+ (\tau_0 - \langle C \rangle_{Q(C|\mathbf{r})} \Delta \tau)\\
+&= \sum_i \frac{r_i}{\sigma^2_{\text{tc}}}+ (\tau_0 - p \Delta \tau)\\
+\mu &= \frac{\sum_i \frac{r_i}{\sigma^2_{\text{tc}}}s_i^{\text{pref}}}{\sum_i \frac{r_i}{\sigma^2_{\text{tc}}}+ (\tau_0 - \langle C \rangle_{Q(C|\mathbf{r})} \Delta \tau)}\\
+&= \frac{\sum_i \frac{r_i}{\sigma^2_{\text{tc}}}s_i^{\text{pref}}}{\tau}
 \end{aligned}
 \end{equation}
 
@@ -97,8 +98,8 @@ So we have update equations:
 \begin{equation}
 \begin{aligned}
 \frac{dp}{dt} &= 1 - p(1 + \sqrt{\frac{\tau_0}{\tau_1}} e^{\frac{\mu^2 + \frac{1}{\tau} \Delta \tau}{2}})\\
-\frac{d \tau}{dt} &= -\tau + \sum_i \frac{\sigma^2_{\text{tc}}}{r_i} + (\tau_0 - p \Delta \tau)\\
-\mu &= \sum_i \frac{\sigma^2_{\text{tc}}}{r_i} s_i^{\text{pref}}\\
+\frac{d \tau}{dt} &= -\tau + \sum_i \frac{r_i}{\sigma^2_{\text{tc}}}+ (\tau_0 - p \Delta \tau)\\
+\frac{d \mu}{dt} &= \sum_i \frac{r_i}{\sigma^2_{\text{tc}}}s_i^{\text{pref}} - \mu \tau\\
 \end{aligned}
 \end{equation}
 
