--- a/Notes/Variational-Categorization.tex
+++ b/Notes/Variational-Categorization.tex
@@ -94,7 +94,7 @@ Also
 
 \begin{equation}
 \begin{aligned}
-\langle s^2 \rangle_{Q(s|\mathbf{r})} &= \frac{\eta}{\tau})^2 + \frac{1}{\tau}\\
+\langle s^2 \rangle_{Q(s|\mathbf{r})} &= (\frac{\eta}{\tau})^2 + \frac{1}{\tau}\\
 \end{aligned}
 \end{equation}
 
