--- a/Notes/Variational-Categorization.tex
+++ b/Notes/Variational-Categorization.tex
@@ -122,4 +122,11 @@ P(\mathbf{r}|C = 0) &= \frac{1}{1 + e^{-(\frac{1}{2} \log \frac{1 + \sigma_1^2 \
 \end{aligned}
 \end{equation}
 
+\begin{equation}
+\frac{1}{|\mathcal{D}|} \mathcal{L} (\theta=\{W,b\}, \mathcal{D}) =
+                \frac{1}{|\mathcal{D}|} \sum_{i=0}^{|\mathcal{D}|}
+                    \log(P(Y=y^{(i)}|x^{(i)}, W,b)) \\
+                \ell (\theta=\{W,b\}, \mathcal{D})
+\end{equation}
+
 \end{document}
