not sure what's happening here...

--- a/Code/Categorization RNN.ipynb
+++ b/Code/Categorization RNN.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:cc195345d23b8456c9d14e627aabb07627488a7cd33d4f0af6089c494750d2d5"
+  "signature": "sha256:0cb23f3eb05514530db46c81d832fffd035b4aa00bbb3aedcb13b2f3848338f1"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -56,25 +56,25 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "[[  2.15767637e-08   1.22622966e-07   6.36899374e-07 ...,   3.39174997e-07\n",
-        "    6.30553894e-08   1.07135670e-08]\n",
-        " [  2.30598127e-08   1.30611754e-07   6.76117610e-07 ...,   3.19043910e-07\n",
-        "    5.91139280e-08   1.00101982e-08]\n",
-        " [  1.32957756e-06   6.05252494e-06   2.51810012e-05 ...,   4.55378370e-09\n",
-        "    6.78122541e-10   9.22905979e-11]\n",
+        "[[  7.40900991e-10   4.95504111e-09   3.02864133e-08 ...,   5.66053618e-06\n",
+        "    1.23839026e-06   2.47611598e-07]\n",
+        " [  7.68713257e-08   4.09232262e-07   1.99108066e-06 ...,   1.00869815e-07\n",
+        "    1.75662714e-08   2.79583444e-09]\n",
+        " [  8.17266961e-09   4.87475336e-08   2.65738726e-07 ...,   8.07091644e-07\n",
+        "    1.57479645e-07   2.80827414e-08]\n",
         " ..., \n",
-        " [  1.11021470e-10   8.09112854e-10   5.38920524e-09 ...,   2.22062845e-05\n",
-        "    5.29408485e-06   1.15350476e-06]\n",
-        " [  4.47675818e-12   3.74392481e-11   2.86156818e-10 ...,   1.67095251e-04\n",
-        "    4.57130777e-05   1.14295811e-05]\n",
-        " [  4.98803756e-20   8.06788548e-19   1.19262314e-17 ...,   1.43106129e-01\n",
-        "    7.57183454e-02   3.66148698e-02]]\n",
-        "[  7.30329660e-01   7.29747126e-01   4.22902241e-01 ...,   4.44557095e-01\n",
-        "   1.07530233e-01   9.58588629e-11]\n"
+        " [  1.99055121e-05   7.68497453e-05   2.71159613e-04 ...,   1.30192635e-10\n",
+        "    1.64425195e-11   1.89785842e-12]\n",
+        " [  9.86339133e-10   6.50945186e-09   3.92623303e-08 ...,   4.54887828e-06\n",
+        "    9.82053942e-07   1.93767023e-07]\n",
+        " [  4.00912945e-11   3.05519772e-10   2.12785514e-09 ...,   4.37350257e-05\n",
+        "    1.09026357e-05   2.48397436e-06]]\n",
+        "[ 0.62696013  0.69970751  0.72740228 ...,  0.06051833  0.64649615\n",
+        "  0.32261149]\n"
        ]
       }
      ],
-     "prompt_number": 69
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -238,7 +238,9 @@
       "        \n",
       "    def mse(self, y):\n",
       "        # error between output and target\n",
-      "        return T.mean((self.y_pred - y) ** 2)\n",
+      "        print self.y_pred.shape\n",
+      "        print y\n",
+      "        return T.mean((self.y_pred.T - y) ** 2)\n",
       "\n",
       "\n",
       "def test_mlp(dataset, n_hidden=2, learning_rate=0.01, n_epochs=10, batch_size=20):\n",
@@ -366,9 +368,10 @@
       "    while (epoch < n_epochs) and (not done_looping):\n",
       "        epoch = epoch + 1\n",
       "        for minibatch_index in xrange(n_train_batches):\n",
-      "\n",
+      "            \n",
       "            minibatch_avg_cost = train_model(minibatch_index)\n",
-      "\n",
+      "            \n",
+      "            print minibatch_avg_cost.real\n",
       "            print(\n",
       "                'epoch %i, minibatch %i/%i%, avg cost %i'\n",
       "                (\n",
@@ -378,7 +381,6 @@
       "                    minibatch_avg_cost\n",
       "                )\n",
       "            )\n",
-      "\n",
       "\n",
       "    end_time = time.clock()\n",
       "    print >> sys.stderr, ('The code ran for %.2fm' % ((end_time - start_time) / 60.))\n",
@@ -395,6 +397,8 @@
         "<bound method TensorSharedVariable.get_value of <TensorType(int32, matrix)>>\n",
         "<bound method TensorSharedVariable.get_value of <TensorType(int32, vector)>>\n",
         "... building the model\n",
+        "Shape.0\n",
+        "y\n",
         "Subtensor{int64:int64:}.0"
        ]
       },
@@ -410,24 +414,23 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "\n"
+        "\n",
+        "0.0\n"
        ]
       },
       {
-       "ename": "ValueError",
-       "evalue": "Input dimension mis-match. (input[0].shape[1] = 1, input[3].shape[1] = 20)\nApply node that caused the error: Elemwise{Composite{(Switch(i0, i1, i2) - i3)}}[(0, 2)](Elemwise{lt,no_inplace}.0, TensorConstant{(1, 1) of 0}, Elemwise{Add}[(0, 0)].0, InplaceDimShuffle{x,0}.0)\nInputs types: [TensorType(int8, matrix), TensorType(int8, (True, True)), TensorType(float64, matrix), TensorType(int32, row)]\nInputs shapes: [(20, 1), (1, 1), (20, 1), (1, 20)]\nInputs strides: [(1, 1), (1, 1), (8, 8), (80, 4)]\nInputs values: ['not shown', array([[0]], dtype=int8), 'not shown', 'not shown']\n\nHINT: Re-running with most Theano optimization disabled could give you a back-trace of when this node was created. This can be done with by setting the Theano flag 'optimizer=fast_compile'. If that does not work, Theano optimizations can be disabled with 'optimizer=None'.\nHINT: Use the Theano flag 'exception_verbosity=high' for a debugprint and storage map footprint of this apply node.",
+       "ename": "TypeError",
+       "evalue": "'str' object is not callable",
        "output_type": "pyerr",
        "traceback": [
-        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-        "\u001b[0;32m<ipython-input-114-ca8977ac6245>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    346\u001b[0m     \u001b[0;32mprint\u001b[0m \u001b[0;34m>>\u001b[0m \u001b[0msys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstderr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m'The code ran for %.2fm'\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mend_time\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mstart_time\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;36m60.\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    347\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 348\u001b[0;31m \u001b[0mtest_mlp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgenerate_popcode_noisy_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mndatapergain\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnneuron\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msig1_sq\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msig2_sq\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msigtc_sq\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgains\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-        "\u001b[0;32m<ipython-input-114-ca8977ac6245>\u001b[0m in \u001b[0;36mtest_mlp\u001b[0;34m(dataset, n_hidden, learning_rate, n_epochs, batch_size)\u001b[0m\n\u001b[1;32m    330\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mminibatch_index\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mxrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn_train_batches\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    331\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 332\u001b[0;31m             \u001b[0mminibatch_avg_cost\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mminibatch_index\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    333\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    334\u001b[0m             print(\n",
-        "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/theano/compile/function_module.pyc\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m    604\u001b[0m                         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnodes\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mposition_of_error\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    605\u001b[0m                         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mthunks\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mposition_of_error\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 606\u001b[0;31m                         storage_map=self.fn.storage_map)\n\u001b[0m\u001b[1;32m    607\u001b[0m                 \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    608\u001b[0m                     \u001b[0;31m# For the c linker We don't have access from\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-        "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/theano/compile/function_module.pyc\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m    593\u001b[0m         \u001b[0mt0_fn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    594\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 595\u001b[0;31m             \u001b[0moutputs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    596\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    597\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mhasattr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'position_of_error'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-        "\u001b[0;31mValueError\u001b[0m: Input dimension mis-match. (input[0].shape[1] = 1, input[3].shape[1] = 20)\nApply node that caused the error: Elemwise{Composite{(Switch(i0, i1, i2) - i3)}}[(0, 2)](Elemwise{lt,no_inplace}.0, TensorConstant{(1, 1) of 0}, Elemwise{Add}[(0, 0)].0, InplaceDimShuffle{x,0}.0)\nInputs types: [TensorType(int8, matrix), TensorType(int8, (True, True)), TensorType(float64, matrix), TensorType(int32, row)]\nInputs shapes: [(20, 1), (1, 1), (20, 1), (1, 20)]\nInputs strides: [(1, 1), (1, 1), (8, 8), (80, 4)]\nInputs values: ['not shown', array([[0]], dtype=int8), 'not shown', 'not shown']\n\nHINT: Re-running with most Theano optimization disabled could give you a back-trace of when this node was created. This can be done with by setting the Theano flag 'optimizer=fast_compile'. If that does not work, Theano optimizations can be disabled with 'optimizer=None'.\nHINT: Use the Theano flag 'exception_verbosity=high' for a debugprint and storage map footprint of this apply node."
+        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+        "\u001b[0;32m<ipython-input-20-af903fe9168a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    304\u001b[0m     \u001b[0;32mprint\u001b[0m \u001b[0;34m>>\u001b[0m \u001b[0msys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstderr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m'The code ran for %.2fm'\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mend_time\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mstart_time\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;36m60.\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    305\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 306\u001b[0;31m \u001b[0mtest_mlp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgenerate_popcode_noisy_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mndatapergain\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnneuron\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msig1_sq\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msig2_sq\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msigtc_sq\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgains\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[0;32m<ipython-input-20-af903fe9168a>\u001b[0m in \u001b[0;36mtest_mlp\u001b[0;34m(dataset, n_hidden, learning_rate, n_epochs, batch_size)\u001b[0m\n\u001b[1;32m    297\u001b[0m                     \u001b[0mminibatch_index\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    298\u001b[0m                     \u001b[0mn_train_batches\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 299\u001b[0;31m                     \u001b[0mminibatch_avg_cost\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    300\u001b[0m                 )\n\u001b[1;32m    301\u001b[0m             )\n",
+        "\u001b[0;31mTypeError\u001b[0m: 'str' object is not callable"
        ]
       }
      ],
-     "prompt_number": 114
+     "prompt_number": 20
     },
     {
      "cell_type": "code",
