1000 epochs, poisson noise

--- a/Code/Categorization.ipynb
+++ b/Code/Categorization.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:13229319d2c58230f52a669b62fe028d28790fb921b048e3a5c9b83e273ecce4"
+  "signature": "sha256:4d2d7b3a4620309480f9f0da99b218c69e3d8ee840d5ff46cc74044d5f12b1d0"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -69,8 +69,7 @@
       "    n = Neuron(x)\n",
       "    neurons.append(n)\n",
       "    responses.append(n.response(s, g))\n",
-      "print responses\n",
-      "print len(neurons)"
+      "print responses"
      ],
      "language": "python",
      "metadata": {},
@@ -80,9 +79,8 @@
        "stream": "stdout",
        "text": [
         "0\n",
-        "2.00636900733\n",
-        "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 1, 2, 0, 2, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-        "41\n"
+        "-4.81079660213\n",
+        "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n"
        ]
       }
      ],
