Lots of updates

--- a/Code/Categorization.ipynb
+++ b/Code/Categorization.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:4d2d7b3a4620309480f9f0da99b218c69e3d8ee840d5ff46cc74044d5f12b1d0"
+  "signature": "sha256:ec8a44430d276e9e38a141c1dff988bfa25f5efcc0b5ebf9bc75b716c25ddbcc"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -2945,6 +2945,119 @@
       }
      ],
      "prompt_number": 39
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "%matplotlib inline\n",
+      "%config InlineBackend.figure_format = 'svg'\n",
+      "import numpy as np\n",
+      "import scipy as sp\n",
+      "import math\n",
+      "import random\n",
+      "import matplotlib.pyplot as plt\n",
+      "from scipy.stats import norm, poisson, entropy\n",
+      "#import seaborn\n",
+      "\n",
+      "nneuron = 41\n",
+      "\n",
+      "sprefs = np.linspace(-60, 60, nneuron)\n",
+      "\n",
+      "sig0_sq      = float(3**2)\n",
+      "sig1_sq      = float(12**2)\n",
+      "sigtc_sq     = float(10**2)\n",
+      "ndatapergain = 100\n",
+      "mu = 0\n",
+      "\n",
+      "tau_0 = 1/sig0_sq\n",
+      "tau_1 = 1/sig1_sq\n",
+      "d_tau = tau_0 - tau_1\n",
+      "sig_tc = 10\n",
+      "min_angle = -60\n",
+      "max_angle = 60\n",
+      "step = 3\n",
+      "prefact = math.sqrt(tau_0/tau_1)\n",
+      "\n",
+      "def generate_popcode_data_poisson(ndatapergain, nneuron, sig0_sq, sig1_sq, sigtc_sq, gain):\n",
+      "    s_s0 = np.random.normal(mu, math.sqrt(sig0_sq), ndatapergain/2)\n",
+      "    s_s1 = np.random.normal(mu, math.sqrt(sig1_sq), ndatapergain/2)\n",
+      "    s = np.concatenate((s_s0, s_s1), axis=1)\n",
+      "    sprefs_data = np.tile(sprefs, (ndatapergain, 1))\n",
+      "    r = gain * np.exp(-np.square((np.transpose(np.tile(s, (nneuron, 1))) - sprefs_data))/(2 * sigtc_sq))\n",
+      "    r = np.random.poisson(r) + 0.0\n",
+      "    ar = np.sum(r1, axis=1)/sigtc_sq\n",
+      "    br = np.sum(r1*sprefs_data, axis=1)/sigtc_sq\n",
+      "    \n",
+      "    term_1 = (1 + sig1_sq * ar1) / (1 + sig0_sq  * ar1)\n",
+      "    term_2_num = (sig1_sq - sig0_sq) * br1**2\n",
+      "    term_2_denom = 2 * (1 + sig0_sq  * ar1) * (1 + sig1_sq * ar1)\n",
+      "    xpnt_a = .5 * np.log(term_1) - term_2_num/term_2_denom\n",
+      "    p = 1/(1 + np.exp(-xpnt_a))\n",
+      "    return r, p, ar, br\n",
+      "\n",
+      "def run_variational_inference(ar, br):\n",
+      "    #variational inference\n",
+      "    p = random.random()\n",
+      "    tau = random.random() * .5\n",
+      "    eta = br\n",
+      "    \n",
+      "    prev_tau = 0\n",
+      "    prev_p = 0\n",
+      "    conv = 0\n",
+      "    while prev_tau != tau and prev_p != p:\n",
+      "    #while round(prev_tau, 3) != round(tau, 3) and round(prev_p, 3) != round(p, 3):\n",
+      "        prev_tau = tau\n",
+      "        prev_p = p\n",
+      "        conv += 1\n",
+      "        tau = ar + (tau_0 - (d_tau * p))\n",
+      "        xpnt = (((eta/tau)**2 + 1/tau) * d_tau)/2\n",
+      "        p = 1/(1 + prefact * math.exp(-xpnt))\n",
+      "        #round\n",
+      "        tau = round(tau, 3)\n",
+      "        p = round(p, 3)\n",
+      "    conv -= 1\n",
+      "    \n",
+      "    return 1 - p, conv\n",
+      "\n",
+      "r1, p1, ar1, br1 = generate_popcode_data_poisson(ndatapergain, nneuron, sig0_sq, sig1_sq, sigtc_sq, 1)\n",
+      "r3, p3, ar3, br3 = generate_popcode_data_poisson(ndatapergain, nneuron, sig0_sq, sig1_sq, sigtc_sq, 3)\n",
+      "r15, p15, ar15, br15 = generate_popcode_data_poisson(ndatapergain, nneuron, sig0_sq, sig1_sq, sigtc_sq, 15)\n",
+      "a1 = p1\n",
+      "a3 = p3\n",
+      "a15 = p15\n",
+      "v1 = [0] * len(a1)\n",
+      "v3 = [0] * len(a3)\n",
+      "v15 = [0] * len(a15)\n",
+      "for i in range(len(a1)):\n",
+      "    v1[i], _ = run_variational_inference(ar1[i], br1[i])\n",
+      "    v3[i], _ = run_variational_inference(ar3[i], br3[i])\n",
+      "    v15[i], _ = run_variational_inference(ar15[i], br15[i])\n",
+      "\n",
+      "fig, ax = plt.subplots(1, 1)\n",
+      "ax.plot(a1, v1, 'bo', lw=5, alpha=0.6, label='g = 1')\n",
+      "ax.plot(a3, v3, 'go', lw=5, alpha=0.6, label='g = 3')\n",
+      "ax.plot(a15, v15, 'ro', lw=5, alpha=0.6, label='g = 15')\n",
+      "ax.axis([0, 1, 0, 1])\n",
+      "ax.set_xlabel(\"Analytic\")\n",
+      "ax.set_ylabel(\"Variational\")"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "ename": "NameError",
+       "evalue": "global name 'r1' is not defined",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+        "\u001b[0;32m<ipython-input-14-f0e0fbe21667>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     69\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0;36m1\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconv\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     70\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 71\u001b[0;31m \u001b[0mr1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mar1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbr1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgenerate_popcode_data_poisson\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mndatapergain\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnneuron\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msig0_sq\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msig1_sq\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msigtc_sq\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     72\u001b[0m \u001b[0mr3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mar3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbr3\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgenerate_popcode_data_poisson\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mndatapergain\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnneuron\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msig0_sq\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msig1_sq\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msigtc_sq\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     73\u001b[0m \u001b[0mr15\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp15\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mar15\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbr15\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgenerate_popcode_data_poisson\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mndatapergain\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnneuron\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msig0_sq\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msig1_sq\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msigtc_sq\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m15\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+        "\u001b[0;32m<ipython-input-14-f0e0fbe21667>\u001b[0m in \u001b[0;36mgenerate_popcode_data_poisson\u001b[0;34m(ndatapergain, nneuron, sig0_sq, sig1_sq, sigtc_sq, gain)\u001b[0m\n\u001b[1;32m     35\u001b[0m     \u001b[0mr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgain\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msquare\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtranspose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mnneuron\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0msprefs_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0msigtc_sq\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     36\u001b[0m     \u001b[0mr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpoisson\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m0.0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 37\u001b[0;31m     \u001b[0mar\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mr1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0msigtc_sq\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     38\u001b[0m     \u001b[0mbr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mr1\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0msprefs_data\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0msigtc_sq\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     39\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+        "\u001b[0;31mNameError\u001b[0m: global name 'r1' is not defined"
+       ]
+      }
+     ],
+     "prompt_number": 14
     },
     {
      "cell_type": "code",
