--- a/Code/Categorization Variational DEF.ipynb
+++ b/Code/Categorization Variational DEF.ipynb
@@ -2,14 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 79,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "nneuron = 41\n",
+    "import numpy as np\n",
+    "from scipy.stats import poisson, norm, bernoulli\n",
     "\n",
+    "nneuron = 41\n",
     "sprefs = np.linspace(-60, 60, nneuron)\n",
     "\n",
     "sig0_sq      = float(3**2)\n",
@@ -48,56 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/ocnc2015/anaconda/lib/python2.7/site-packages/IPython/kernel/__main__.py:25: RuntimeWarning: invalid value encountered in log\n",
-      "/Users/ocnc2015/anaconda/lib/python2.7/site-packages/IPython/kernel/__main__.py:25: RuntimeWarning: divide by zero encountered in log\n"
-     ]
-    }
-   ],
-   "source": [
-    "r, p, ar, br = generate_popcode_data(ndatapergain, nneuron, sig0_sq, sig1_sq, sigtc_sq, 1, \"poisson\")\n",
-    "k_l = [nneuron, 1, 1]\n",
-    "L = len(k_l)\n",
-    "\"\"\"\n",
-    "#order effects?\n",
-    "tau = np.random.random_sample()\n",
-    "eta = np.random.random_sample()\n",
-    "p = np.random.random_sample()\n",
-    "lmbda_poisson = [[np.log(spref)] for spref in sprefs]\n",
-    "lmbda_normal = [[tau, eta]]\n",
-    "lmbda_bernoulli = [[p]]\n",
-    "lmbda = [lmbda_poisson, lmbda_normal, lmbda_bernoulli]\n",
-    "\"\"\"\n",
-    "#[poisson, normal, normal]\n",
-    "xi_poisson = np.random.rand(nneuron, 1) #[ln lmbda]\n",
-    "xi_normal1 = np.random.rand(1, 2) #[tau, eta]\n",
-    "xi_normal2 = np.random.rand(1, 2) #[tau, eta]\n",
-    "xi = [xi_poisson, xi_normal1, xi_normal2]\n",
-    "q_W = [np.random.poisson, np.random.normal, np.random.normal]\n",
-    "train_data = r\n",
-    "for n in train_data:\n",
-    "    converged = False\n",
-    "    lmbda_poisson = np.random.rand(nneuron, 1) #[ln lmbda]\n",
-    "    lmbda_normal = np.random.rand(1, 2) #[tau, eta]\n",
-    "    lmbda_bernoulli = np.random.rand(1, 1) #[p]\n",
-    "    lmbda = [lmbda_poisson, lmbda_normal, lmbda_bernoulli]\n",
-    "    while not converged:\n",
-    "        for l in range(L):\n",
-    "            z1 = \n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 109,
    "metadata": {
     "collapsed": false
    },
@@ -106,20 +59,224 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1]\n"
+      "[array([ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+      "        0.,  0.,  0.,  0.,  0.,  1.,  1.,  0.,  0.,  0.,  0.,  0.,  1.,\n",
+      "        0.,  0.,  2.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+      "        0.,  0.])]\n",
+      "[ 0.67046837  0.44964038  0.19809413  1.84312461  0.42895796  0.7971472\n",
+      "  1.11886677  0.49908167  1.06717282  0.85917959  0.99896928  2.29063377\n",
+      "  0.79185356 -0.72743688  0.54741657  0.0131168  -0.03737035 -0.28495041\n",
+      "  1.62505018  0.81535377  0.60890896 -0.36626147  0.79549747  0.76920595\n",
+      "  0.94708674  2.18207774  0.99383069  0.96369049 -0.35763547 -0.30552068\n",
+      " -0.17462723  0.32126341 -0.1273825   0.47144636  0.75172618  0.89138657\n",
+      "  1.18359106  0.70203763 -0.04395424  0.2689472   0.23626658]\n",
+      "[ 0.          0.          0.19809413  0.          0.          0.          0.\n",
+      "  0.          0.          0.          0.99896928  0.          0.         -0.\n",
+      "  0.54741657  0.0131168  -0.         -0.          1.62505018  0.81535377\n",
+      "  0.         -0.          0.79549747  1.5384119   0.          2.18207774\n",
+      "  0.          0.         -0.         -0.         -0.          0.         -0.\n",
+      "  0.47144636  0.          0.89138657  0.          0.         -0.          0.2689472\n",
+      "  0.        ]\n",
+      "0.0\n",
+      "0.5\n",
+      "0.0\n",
+      "0.5\n",
+      "0.0\n",
+      "0.549362218721\n",
+      "0.0\n",
+      "0.5\n",
+      "0.0\n",
+      "0.5\n",
+      "0.0\n",
+      "0.5\n",
+      "0.0\n",
+      "0.5\n",
+      "0.0\n",
+      "0.5\n",
+      "0.0\n",
+      "0.5\n",
+      "0.0\n",
+      "0.5\n",
+      "0.0\n",
+      "0.730855878924\n",
+      "0.0\n",
+      "0.5\n",
+      "0.0\n",
+      "0.5\n",
+      "0.0\n",
+      "0.5\n",
+      "0.0\n",
+      "0.63353600735\n",
+      "0.0\n",
+      "0.503279152547\n",
+      "0.0\n",
+      "0.5\n",
+      "0.0\n",
+      "0.5\n",
+      "1.0\n",
+      "0.1501680261\n",
+      "1.0\n",
+      "0.253982771963\n",
+      "0.0\n",
+      "0.5\n",
+      "0.0\n",
+      "0.5\n",
+      "0.0\n",
+      "0.689010522618\n",
+      "0.0\n",
+      "0.823233742997\n",
+      "0.0\n",
+      "0.5\n",
+      "1.0\n",
+      "0.0960504155325\n",
+      "0.0\n",
+      "0.5\n",
+      "0.0\n",
+      "0.5\n",
+      "2.0\n",
+      "0.12011325348\n",
+      "0.0\n",
+      "0.5\n",
+      "0.0\n",
+      "0.5\n",
+      "0.0\n",
+      "0.5\n",
+      "0.0\n",
+      "0.5\n",
+      "0.0\n",
+      "0.615726032383\n",
+      "0.0\n",
+      "0.5\n",
+      "0.0\n",
+      "0.709176229087\n",
+      "0.0\n",
+      "0.5\n",
+      "0.0\n",
+      "0.5\n",
+      "0.0\n",
+      "0.5\n",
+      "0.0\n",
+      "0.566834425521\n",
+      "0.0\n",
+      "0.5\n",
+      "[ 0.95993403]\n",
+      "[ 0.97538548]\n",
+      "[ 1.05805441]\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "index 2 is out of bounds for axis 0 with size 1",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-109-5c28fc03fc89>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     55\u001b[0m             \u001b[0mW\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0ml\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconcatenate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mW\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0ml\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     56\u001b[0m             \u001b[0;32mprint\u001b[0m \u001b[0mW\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0ml\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 57\u001b[0;31m             \u001b[0mp\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0ml\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     58\u001b[0m             \u001b[0mparams\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mz\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0ml\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mW\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0ml\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     59\u001b[0m             \u001b[0;32mprint\u001b[0m \u001b[0mparams\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: index 2 is out of bounds for axis 0 with size 1"
      ]
     }
    ],
    "source": [
-    "x = np.random.poisson\n",
-    "print x(1, 1)"
+    "r, p, ar, br = generate_popcode_data(ndatapergain, nneuron, sig0_sq, sig1_sq, sigtc_sq, 1, \"poisson\")\n",
+    "def log_softmax(zTw):\n",
+    "    return np.log(1 + np.exp(-zTw))\n",
+    "def identity(zTw):\n",
+    "    return zTw\n",
+    "def norm_g(zTw):\n",
+    "    return zTw #????\n",
+    "\n",
+    "k_l = [nneuron, 1, 1]\n",
+    "L = len(k_l)\n",
+    "#[normal, normal, normal]\n",
+    "xi_normal1 = np.random.rand(nneuron, 2) #[mu, sigma]\n",
+    "xi_normal2 = np.random.rand(1, 2) #[mu, sigma]\n",
+    "xi_normal3 = np.random.rand(1, 2) #[mu, sigma]\n",
+    "xi = [xi_normal1, xi_normal2, xi_normal3]\n",
+    "q_W = [np.random.normal, np.random.normal, np.random.normal]\n",
+    "q_z = [np.random.poisson, np.random.normal, np.random.binomial]\n",
+    "p_W = [norm, norm, norm]\n",
+    "p_z = [poisson, norm, bernoulli]\n",
+    "g = [log_softmax, norm_g, identity]\n",
+    "train_data = [r[1]]\n",
+    "print train_data\n",
+    "S = 1\n",
+    "z = [None]*L\n",
+    "W = [None]*L\n",
+    "p = [None]*L\n",
+    "q = [None]*L\n",
+    "#p_W = [None]*L\n",
+    "#q_W = [None]*L\n",
+    "for n in train_data:\n",
+    "    converged = False\n",
+    "    lam_poisson = map(tuple, np.random.rand(nneuron, 1)) #[ln lmbda]\n",
+    "    lam_normal = np.random.rand(1, 2) #[mu, sigma]\n",
+    "    lam_bernoulli = np.random.rand(1, 1) #[p]\n",
+    "    lam = [lam_poisson, lam_normal, lam_bernoulli]\n",
+    "    while not converged:\n",
+    "        for l in range(L):\n",
+    "            z[l] = []\n",
+    "            for params in lam[l]:\n",
+    "                if q_z[l] == np.random.poisson:\n",
+    "                    lam_q = params\n",
+    "                    z[l].append(q_z[l](lam=lam_q, size=(len(lmbda_poisson), S))[0])\n",
+    "                elif q_z[l] == np.random.normal:\n",
+    "                    loc, scale = params\n",
+    "                    z[l].append((q_z[l](loc=loc, scale=scale, size=S)))\n",
+    "                elif q_z[l] == np.random.binomial:\n",
+    "                    p = params\n",
+    "                    z[l].append(q_z[l](n=1, p=p, size=S))\n",
+    "            z[l] = np.concatenate(z[l])\n",
+    "            W[l] = []\n",
+    "            for params in xi[l]:\n",
+    "                if q_W[l] == np.random.normal:\n",
+    "                    loc, scale = params\n",
+    "                    W[l].append(q_W[l](loc=loc, scale=scale, size=S))\n",
+    "            W[l] = np.concatenate(W[l])\n",
+    "            print W[l]\n",
+    "            p[l] = []\n",
+    "            params = z[l] * W[l]\n",
+    "            print params\n",
+    "            for i in range(len(z[l])):\n",
+    "                if p_z[l] == poisson:\n",
+    "                    lam_p = g[l](params[i])\n",
+    "                    print n[i]\n",
+    "                    p[l] = p_z[l].pmf(n[i], lam_p)\n",
+    "                    print p[l]\n",
+    "                    #p[l].append(np.log(p_z[l](lam=z[l])[0]))\n",
+    "                #if p\n",
+    "        converged = True\n",
+    "    print z\n",
+    "    print W"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 108,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = \"Id\"\n",
+    "s == \"Id\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {
+    "collapsed": false
    },
    "outputs": [],
    "source": []
